# super-productivity-local-bridge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  bootstrap.md  getting-started.md  index.md  operations.md  security.md  troubleshooting.md  validation.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/hosts/: claude-desktop.md  codex.md  index.md  vscode-copilot.md
examples/rest/: health-ok.json  project-list-ok.json  tag-list-ok.json  task-create-error.json  task-create-ok.json  task-list-ok.json
plugin/: index.html  manifest.json  plugin.js
scripts/: install.sh  uninstall.sh
skills/sp-local-bridge-setup/: SKILL.md  manifest.yaml
src/sp_local_bridge/: __init__.py  __main__.py  cli.py
src/sp_local_bridge/adapters/: __init__.py  mcp_server.py
src/sp_local_bridge/core/: __init__.py  errors.py  models.py  operations.py  service.py
src/sp_local_bridge/diagnostics/: __init__.py  configure.py  doctor.py  host_config.py
src/sp_local_bridge/sp_rest/: __init__.py  client.py
tests/: conftest.py  test_cli.py  test_configure.py  test_core_models.py  test_core_service.py  test_doctor.py  test_host_config.py  test_install_scripts.py  test_mcp_adapter.py  test_mcp_protocol.py  test_mcp_stdio.py  test_rest_client.py  test_smoke.py
tests/fixtures/: app-not-ready-error.json  status-ok.json  task-create-error-with-details.json  task-create-error.json  task-create-request.json  task-update-ok.json  task-update-request.json
