[project]
name = "sp-local-bridge"
version = "0.1.0.dev0"
description = "Local automation bridge for Super Productivity — REST-first with MCP adapter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Cameron Brooks" }]
keywords = ["super-productivity", "automation", "mcp", "local-bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.28,<1",
    "mcp>=1.9,<2",
    "pydantic>=2.12,<3",
]

[project.scripts]
sp-local-bridge = "sp_local_bridge.cli:main"
sp-local-bridge-mcp = "sp_local_bridge.adapters.mcp_server:main"
sp-local-bridge-doctor = "sp_local_bridge.diagnostics.doctor:main"

[project.urls]
Repository = "https://github.com/CameronBrooks11/super-productivity-local-bridge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sp_local_bridge"]

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6",
    "respx>=0.23.1",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["sp_local_bridge"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sp_local_bridge"]

[tool.coverage.report]
show_missing = true
skip_empty = true
